--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             var mtlLoader = new THREE.MTLLoader();
             mtlLoader.setBaseUrl('assets/');
             mtlLoader.setPath('assets/');
-            mtlLoader.load('female-croupier-2013-03-26.mtl', function (materials) {
+            mtlLoader.load('leones.mtl', function (materials) {
 
                 materials.preload();
 
@@ -121,7 +121,7 @@
                 var objLoader = new THREE.OBJLoader();
                 objLoader.setMaterials(materials);
                 objLoader.setPath('assets/');
-                objLoader.load('female-croupier-2013-03-26.obj', function (object) {
+                objLoader.load('leones.obj', function (object) {
 
                     scene.add(object);
 
